5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1764_1580.log
== TEST (2019-05-23 16:41:05) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
print(vb)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:42:56) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
print(vb)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:43:09) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
print(vb)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:43:14) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
print(vb)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:47:20) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
f = 0
while k < size(a):
	if va[ḱ] == -1:
		f +=1
print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:48:00) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
f = 0
while k < size(a):
	if va[ḱ] == -1:
		k +=1
print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:48:51) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
f = 0
while k < size(a):
	if va(k) == -1:
		k +=1
print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:49:06) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
f = 0
while k < size(a):
	if va(k) == -1:
		k +=1
print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:50:06) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
f = 0
while k < size(a):
	if (va[k] == -1):
		k +=1
print(f)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 16:50:48) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
f = 0
while k < size(a):
	if (va[k] == -1):
		k +=1
print(k)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:16:14) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k < size(a):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (0 <= va[k] <= 10):
		alunos +=1
		notas =+ va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:17:23) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k < size(a):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (0 <= va[k] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:19:36) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k < size(a):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:20:32) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k < size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:20:40) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k < size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:22:00) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:22:06) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.287184
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 13, in <module>
    if (va[k] == -1):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:22:19) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
1.0307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 13, in <module>
    if (va[k] == -1):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:22:19) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
2.23589
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 13, in <module>
    if (va[k] == -1):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:22:20) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
2.58078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 13, in <module>
    if (va[k] == -1):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:22:20) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
2.1453
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 13, in <module>
    if (va[k] == -1):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:22:20) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
2.6716
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 13, in <module>
    if (va[k] == -1):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 17:22:20) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
2.98353
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 13, in <module>
    if (va[k] == -1):
IndexError: index 11 is out of bounds for axis 0 with size 11

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 22:40:27) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.525145
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 13, in <module>
    if (va[k] == -1):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:40:28) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 22:40:55) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k < size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.456232
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 26, in <module>
    l = notas/alunos
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:40:58) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:41:38) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 22:47:02) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	elif (va[k] >= 6):
		aprovados +=1
	elif (va[k] < 6):
		reprovados +=1
	elif (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	elif va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 00:40:50) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.404282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 19, in <module>
    if (va[k] >= 0) and (va[\u1e31] <= 10):
NameError: name '\u1e31' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 00:40:53) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max[notas]:
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 00:51:05) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(notas):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.450623
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 19, in <module>
    if (va[k] >= 0) and (va[\u1e31] <= 10):
NameError: name '\u1e31' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 00:51:06) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(notas):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 01:03:12) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
i = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[i] == max(notas):
		x = vb[i]
	i +=1	
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.484804
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 20, in <module>
    if (va[k] >= 0) and (va[\u1e31] <= 10):
NameError: name '\u1e31' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 01:08:54) 
-- CODE:
from numpy import*
a = eval(input())
b = eval(input())
va = array(a)
vb = array(b)
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(notas):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 02:55:36) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(notas):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.563064
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 17, in <module>
    if (va[k] >= 0) and (va[\u1e31] <= 10):
NameError: name '\u1e31' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 02:55:38) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(notas):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 02:56:50) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.446181
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 17, in <module>
    if (va[k] >= 0) and (va[\u1e31] <= 10):
NameError: name '\u1e31' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 02:56:51) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:42:46) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.482931
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1764/1580/main.py", line 17, in <module>
    if (va[k] >= 0) and (va[\u1e31] <= 10):
NameError: name '\u1e31' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:42:49) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6):
		reprovados +=1
	if (va[k] >= 0) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:55:06) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6) and (va[k] > -1):
		reprovados +=1
	if (va[k] > -1) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:55:06) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6) and (va[k] > -1):
		reprovados +=1
	if (va[k] > -1) and (va[ḱ] <= 10):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:57:13) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6) and (va[k] > -1):
		reprovados +=1
	if (va[k] > -1):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:57:38) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6) and (va[k] > -1):
		reprovados +=1
	if (va[k] > -1):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:01:36) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k <= size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6) and (va[k] > -1):
		reprovados +=1
	if (va[k] > -1):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:02:26) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k < size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6) and (va[k] > -1):
		reprovados +=1
	if (va[k] > -1):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:03:08) 
-- CODE:
from numpy import*
va = array(eval(input()))
vb = array(eval(input()))
k = 0
notas = 0
faltaram = 0
aprovados = 0
reprovados = 0
alunos = 0
while k < size(va):
	if (va[k] == -1):
		faltaram +=1
	if (va[k] >= 6):
		aprovados +=1
	if (va[k] < 6) and (va[k] > -1):
		reprovados +=1
	if (va[k] > -1):
		alunos +=1
		notas += va[k]
	if va[k] == max(va):
		x = vb[k]
		
	k +=1
l = notas/alunos
print(faltaram)
print(aprovados)
print(reprovados)
print(round(l,2))
print(x)
-- EXECUTION TIME:
0.439192
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
